# Eichhoernchen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Frontend/: CMakeLists.txt
Frontend/src/: Main.cpp
Frontend/src/Factories/: ArchimedesFactory.cpp
Processors/Arm/Arm/: CMakeLists.txt
Processors/Arm/Arm/include/Arm/: Arm.h  Assembler.h  Disassembler.h
Processors/Arm/Arm/private/Assembler/: Assembler_Impl.h  SourceLine.h
Processors/Arm/Arm/private/Common/: BitUtil.h  Constants.h  Decode.h  Encode.h  Shifts.h  SignExtend.h
Processors/Arm/Arm/src/Arm/: Arm.cpp  Arm_BlockDataTransferLoad.cpp  Arm_BlockDataTransferStore.cpp  Arm_Branch.cpp  Arm_CoprocessorDataOperation.cpp  Arm_CoprocessorDataTransfer.cpp  Arm_CoprocessorRegisterTransfer.cpp  Arm_DataProcessing.cpp  Arm_DataProcessingImmediate.cpp  Arm_DataProcessingInstructionShift.cpp  Arm_DataProcessingRegisterShift.cpp  Arm_SingleDataTransferImmediateLoad.cpp  Arm_SingleDataTransferImmediateStore.cpp  Arm_SingleDataTransferRegisterLoad.cpp  Arm_SingleDataTransferRegisterStore.cpp
Processors/Arm/Arm/src/Assembler/: Assembler.cpp  Assembler_BlockDataTransfer.cpp  Assembler_Branch.cpp  Assembler_ConditionCode.cpp  Assembler_Coprocessor.cpp  Assembler_CoprocessorDataOperations.cpp  Assembler_CoprocessorDataTransfer.cpp  Assembler_CoprocessorRegisterTransfers.cpp  Assembler_DataProcessing.cpp  Assembler_Impl.cpp  Assembler_Multiply.cpp  Assembler_Number.cpp  Assembler_Operand2.cpp  Assembler_SingleDataTransfer.cpp  Assembler_SoftwareInterrupt.cpp  Assembler_Swap.cpp  SourceLine.cpp
Processors/Arm/Arm/src/Disassembler/: Disassembler.cpp
Processors/Arm/Tests/: CMakeLists.txt
Processors/Arm/Tests/include/Arm/: ArmTest.h
Processors/Arm/Tests/include/Common/: BitUtil.h
Processors/Arm/Tests/include/Data/Assembler/: AssemblerNegativeParameter.h  AssemblerPositiveParameter.h  BlockTransferNegatives.h  ConditionCodesPositives.h  Operand2Negatives.h  Operand2Positives.h  SingleDataTransferNegatives.h
Processors/Arm/Tests/include/Data/Common/: BlockDataTransfer.h  Branch.h  CommonParameter.h  CoprocessorDataOperation.h  CoprocessorDataTransfer.h  CoprocessorRegisterTransfer.h  DataProcessing.h  Multiply.h  SingleDataTransfer.h  SoftwareInterrupt.h  Swap.h
Processors/Arm/Tests/src/Arm/: ArmTest.cpp
Processors/Arm/Tests/src/Arm/Branch/: Branch.cpp  BranchWithLink.cpp
Processors/Arm/Tests/src/Arm/ConditionCodes/: ConditionCodeAL.cpp  ConditionCodeCC.cpp  ConditionCodeCS.cpp  ConditionCodeEQ.cpp  ConditionCodeGE.cpp  ConditionCodeGT.cpp  ConditionCodeHI.cpp  ConditionCodeLE.cpp  ConditionCodeLS.cpp  ConditionCodeLT.cpp  ConditionCodeMI.cpp  ConditionCodeNE.cpp  ConditionCodeNV.cpp  ConditionCodePL.cpp  ConditionCodeVC.cpp  ConditionCodeVS.cpp
Processors/Arm/Tests/src/Arm/CoprocessorDataOperation/: CoprocessorDataOperation.cpp
Processors/Arm/Tests/src/Arm/CoprocessorDataTransfer/: LoadCoprocessorLongForm.cpp  LoadCoprocessorShortForm.cpp  StoreCoprocessorLongForm.cpp  StoreCoprocessorShortForm.cpp
Processors/Arm/Tests/src/Arm/CoprocessorRegisterTransfer/: MoveRegisterFromCoprocessor.cpp  MoveRegisterToCoprocessor.cpp
Processors/Arm/Tests/src/Arm/DataProcessingImmediate/BarrelShifter/: BarrelShifterImmediate.cpp
Processors/Arm/Tests/src/Arm/DataProcessingImmediate/Operations/: AdcOperand2Immediate.cpp  AddOperand2Immediate.cpp  AndOperand2Immediate.cpp  BicOperand2Immediate.cpp  CmnOperand2Immediate.cpp  CmpOperand2Immediate.cpp  EorOperand2Immediate.cpp  MovOperand2Immediate.cpp  MvnOperand2Immediate.cpp  OrrOperand2Immediate.cpp  RsbOperand2Immediate.cpp  RscOperand2Immediate.cpp  SbcOperand2Immediate.cpp  SubOperand2Immediate.cpp  TeqOperand2Immediate.cpp  TstOperand2Immediate.cpp
Processors/Arm/Tests/src/Arm/DataProcessingInstructionShift/Operations/: AdcOperand2InstructionShift.cpp  (+15 more)
Processors/Arm/Tests/src/Arm/Exceptions/: AddressException.cpp  DataAbort.cpp  FastInterrupt.cpp  Interrupt.cpp  PrefetchAbort.cpp  UndefinedInstruction.cpp
Processors/Arm/Tests/src/Arm/SoftwareInterrupt/: SoftwareInterrupt.cpp
Processors/Arm/Tests/src/Assembler/: AssemblerNegativeTest.cpp  AssemblerPositiveTest.cpp
Processors/Arm/Tests/src/Disassembler/: DisassemblerPositiveTest.cpp
Systems/Archimedes/: CMakeLists.txt
Systems/Archimedes/include/Archimedes/: Archimedes.h  ArchimedesConfiguration.h  ArchimedesDiscImage.h  ArchimedesIoc.h  ArchimedesKeyboard.h  ArchimedesMediator.h  ArchimedesMemc.h  ArchimedesTimer.h  ArchimedesVidc.h  I2CBus.h  I2CController.h  RTC8583.h  WDC1772.h
Systems/Archimedes/src/: Archimedes.cpp  ArchimedesDiscImage.cpp  ArchimedesIoc.cpp  ArchimedesKeyboard.cpp  ArchimedesKeyboardConfiguration.cpp  ArchimedesMemc.cpp  ArchimedesVidc.cpp  ArchimedesVidc_Fifo.cpp  I2CController.cpp  RTC8583.cpp  WDC1772.cpp
Tests/Systems/Archimedes/: CMakeLists.txt
Tests/Systems/Archimedes/include/Archimedes/: ArchimedesMock.h  IocTest.h  KeyboardTest.h  MemcTest.h  RTC8583Test.h  WDC1772Test.h
Tests/Systems/Archimedes/src/Ioc/: BankTest.cpp  InternalRegisterByteTest.cpp  InternalRegisterWordTest.cpp  InterruptEvents.cpp  IocTest.cpp
Tests/Systems/Archimedes/src/Keyboard/: BothScan.cpp  KeyboardScan.cpp  KeyboardTest.cpp  MouseScan.cpp  NoScan.cpp  ResetProtocol.cpp
Tests/Systems/Archimedes/src/Memc/: AccessTiming.cpp  AddressTranslator.cpp  ControlRegister.cpp  Dma.cpp  DmaAddressGenerator.cpp  FlyBack.cpp  HighRom.cpp  InputOutputController.cpp  LogicalMemoryFourMegabytes.cpp  LogicalMemoryHalfMegabyte.cpp  LogicalMemoryOneMegabyte.cpp  LogicalMemoryTwoMegabytes.cpp  LowRom.cpp  MemcTest.cpp  PhysicalMemory.cpp  Reset.cpp  VideoController.cpp
Tests/Systems/Archimedes/src/RTC8583/: RTC8583Test.cpp  RTC8583Transactions.cpp
Tests/Systems/Archimedes/src/WDC1772/: ForceInterrupts.cpp  ReadAddresses.cpp  ReadSectors.cpp  Registers.cpp  Restores.cpp  Seeks.cpp  StepIns.cpp  StepOuts.cpp  Steps.cpp  WDC1772Test.cpp  WriteSectors.cpp
Toolkit/: CMakeLists.txt
Toolkit/include/Toolkit/: Toolkit.h
Toolkit/src/: Toolkit.cpp  Toolkit_File.cpp  Toolkit_PresentationContext.cpp  Toolkit_ZipFile.cpp
(+87 files in other folders)
